[package]
name = "vesc-api"
version = "0.1.1"
edition = "2021"
description = "A Rust API for communicating with VESC motor controllers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CrazyPandabier/rust-vesc-api"
readme = "README.md"
keywords = ["vesc", "motor", "controller"]

[dependencies]
log = "0.4.27"
serial = "0.4.0"
